--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,47 @@
-/* You can add global styles to this file, and also import other style files */
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  color: white;
+  font-family: "Poppins", sans-serif;
+}
+
+:root {
+  --blue-light: #00aeff;
+}
+
+body {
+  background: black;
+}
+
+.container {
+  margin: auto;
+  padding: 30px 40px;
+  max-width: 1300px;
+  width: 90vw;
+}
+
+.flex {
+  display: flex;
+}
+
+.grid {
+  display: grid;
+}
+
+button {
+  padding: 10px 16px;
+  border-radius: 4px;
+  font-size: 14px;
+}
+
+.btn-primary {
+  background: var(--blue-light);
+  border: 2px solid var(--blue-light);
+}
+
+.btn-secondary {
+  background: transparent;
+  border: 2px solid white;
+}
