--- a/src/app/components/hero/hero.component.css
+++ b/src/app/components/hero/hero.component.css
@@ -1,7 +1,4 @@
 section {
-  background: url("../../../assets/banner-hero/games/diablo-bg.png");
+  background: url("../../../assets/banner-hero/games/diablo-bg.png") no-repeat top center / cover;
   height: 650px;
-  background-repeat: no-repeat;
-  background-size: cover;
 }
-
