update bg size on change

--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,1 +1,21 @@
-<p>main works!</p>
+<main class="container">
+  <div class="flex">
+
+    <p>Games</p>
+
+    <h2>Jogos exclusivos</h2>
+
+    <div class="icons">
+    </div>
+
+    <div class="flex see-more">
+      <div class="menu-icon grid">
+        <div></div>
+      </div>
+      
+      <svg xmlns="http://www.w3.org/2000/svg" width="10" height="22" viewBox="0 0 512 512"><path fill="var(--blue-light)" d="M186.2 139.6h139.6V0H186.2zM372.4 0v139.6H512V0zM0 139.6h139.6V0H0zm186.2 186.2h139.6V186.2H186.2zm186.2 0H512V186.2H372.4zM0 325.8h139.6V186.2H0zM186.2 512h139.6V372.4H186.2zm186.2 0H512V372.4H372.4zM0 512h139.6V372.4H0z"/></svg>
+      <p><span>Ver todos jogos</span></p>
+    </div>
+
+  </div>
+</main>
