--- a/src/app/components/main/main.component.css
+++ b/src/app/components/main/main.component.css
@@ -2,20 +2,29 @@
   --blue-light: #00aeff;
 }
 
-main > div {
+main > section.header {
   gap: 40px;
   justify-content: space-between;
+}
+
+section.header > * {
+  max-width: 20%;
 }
 
 h2 {
   width: 80px;
 }
 
-.menu-icon > * {
-  width: 4px;
-  height: 4px;
-  background: var(--blue-light);
-  margin: 0 2px 2px 0;
+.subtitle {
+  text-transform: uppercase;
+  opacity: .5;
+  font-size: 14px;
+}
+
+.icons {
+  gap: 12px;
+  opacity: .9;
+  margin-top: auto;
 }
 
 .see-more {
@@ -29,3 +38,8 @@ span {
   font-size: 12px;
   color: var(--blue-light);
 }
+
+.games {
+  padding: 40px 0;
+}
+
