--- a/src/app/components/banner/banner.component.css
+++ b/src/app/components/banner/banner.component.css
@@ -49,8 +49,10 @@ button {
   left: 110px;
   background: rgba(0, 0, 0, 0.651);
   border-radius: 50%;
-  padding: 20px;
-  z-index: 3;
+  padding: 15px;
+  z-index: 99;
+  width: 51px;
+  height: 51px;
 }
 
 .img-trailer, .gif-trailer {
@@ -60,6 +62,7 @@ button {
   border-radius: 5px;
   cursor: pointer;
   right: 0;
+  z-index: 3;
 }
 
 .banner-icons img {
