--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -11,7 +11,12 @@
   <div class="card last-card flex">
     <img class="blizzard-logo" src="../../../assets/logo-blizzard.png" alt="">
     <div class="flex see-more">
-      <svg xmlns="http://www.w3.org/2000/svg" width="10" height="22" viewBox="0 0 512 512"><path fill="white" d="M186.2 139.6h139.6V0H186.2zM372.4 0v139.6H512V0zM0 139.6h139.6V0H0zm186.2 186.2h139.6V186.2H186.2zm186.2 0H512V186.2H372.4zM0 325.8h139.6V186.2H0zM186.2 512h139.6V372.4H186.2zm186.2 0H512V372.4H372.4zM0 512h139.6V372.4H0z"/></svg>
+      <svg width="11" height="10" viewBox="0 0 11 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <rect x="0.949951" y="0.137573" width="3.225" height="3.225" fill="white"/>
+        <rect x="0.949951" y="6.58759" width="3.225" height="3.225" fill="white"/>
+        <rect x="7.3999" y="0.137573" width="3.225" height="3.225" fill="white"/>
+        <rect x="7.3999" y="6.58759" width="3.225" height="3.225" fill="white"/>
+        </svg>
       <p><span>Ver todos jogos</span></p>
     </div>
   </div>
