--- a/src/app/components/main/main.component.css
+++ b/src/app/components/main/main.component.css
@@ -34,6 +34,10 @@ h2 {
   align-items: flex-end;
 }
 
+.see-more svg {
+  margin: 6px 0;
+}
+
 span {
   font-size: 12px;
   color: var(--blue-light);
