download app added

--- a/src/app/components/download/download.component.html
+++ b/src/app/components/download/download.component.html
@@ -1,1 +1,57 @@
-<p>download works!</p>
+<footer>
+  <div class="container flex">
+
+    <div class="text-section flex">
+      <img src="../../../assets/logo-battle-net.png" alt="">
+      <h2>Baixe agora o battle.net</h2>
+      <ul>
+        <li>
+          <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path opacity="0.5" d="M17.0066 4.24764H3.00073" stroke="#00AEFF" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+            <path opacity="0.3" d="M5.00171 1.24642H15.0059" stroke="#00AEFF" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M17.0067 19.2539H3.00083C1.8958 19.2539 1 18.3581 1 17.2531V9.24973C1 8.1447 1.8958 7.2489 3.00083 7.2489H17.0067C18.1117 7.2489 19.0075 8.1447 19.0075 9.24973V17.2531C19.0075 18.3581 18.1117 19.2539 17.0067 19.2539Z" stroke="#00AEFF" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+            <path d="M11.5603 12.4741L9.61551 14.4189L8.44702 13.2514" stroke="#00AEFF" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg> Seus jogos em um só lugar
+        </li>
+        <li><svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path opacity="0.6" fill-rule="evenodd" clip-rule="evenodd" d="M4.74856 10.7883C2.67702 10.79 0.998896 12.4704 1 14.5419C1.00111 16.6134 2.68102 18.292 4.75256 18.2915C6.8241 18.2909 8.50313 16.6114 8.50313 14.5399C8.50286 13.5445 8.10711 12.59 7.40296 11.8864C6.69882 11.1828 5.74398 10.7878 4.74856 10.7883Z" stroke="#00AEFF" stroke-width="2"/>
+          <path fill-rule="evenodd" clip-rule="evenodd" d="M15.2469 10.7883C13.1753 10.79 11.4972 12.4704 11.4983 14.5419C11.4994 16.6134 13.1793 18.292 15.2509 18.2915C17.3224 18.2909 19.0014 16.6114 19.0014 14.5399C19.0012 13.5445 18.6054 12.59 17.9013 11.8864C17.1971 11.1828 16.2423 10.7878 15.2469 10.7883V10.7883Z" stroke="#00AEFF" stroke-width="2"/>
+          <path opacity="0.8" fill-rule="evenodd" clip-rule="evenodd" d="M9.99783 1.7085C7.92629 1.71015 6.24816 3.39052 6.24927 5.46206C6.25037 7.5336 7.93029 9.21217 10.0018 9.21162C12.0734 9.21107 13.7524 7.5316 13.7524 5.46006C13.7521 4.46464 13.3564 3.51012 12.6522 2.80654C11.9481 2.10295 10.9932 1.70797 9.99783 1.7085Z" stroke="#00AEFF" stroke-width="2"/>
+          </svg> Conecte-se aos seus amigos</li>
+        <li><svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path opacity="0.4" d="M16.6119 4.50001C16.3819 4.20101 16.1379 3.91001 15.8639 3.63601C12.3489 0.121006 6.65094 0.121006 3.13594 3.63601C2.86194 3.91001 2.61894 4.20101 2.38794 4.50001" stroke="#00AEFF" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+          <path opacity="0.4" d="M2.38794 15.5C2.61794 15.799 2.86194 16.09 3.13594 16.364C6.65094 19.879 12.3489 19.879 15.8639 16.364C16.1379 16.09 16.3809 15.799 16.6119 15.5" stroke="#00AEFF" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+          <path fill-rule="evenodd" clip-rule="evenodd" d="M4.021 12.571H1V10.04H4.019C4.718 10.04 5.285 10.607 5.285 11.306V11.306C5.286 12.005 4.719 12.571 4.021 12.571Z" stroke="#00AEFF" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+          <path d="M1 10.04V7.42896H3.7C4.421 7.42896 5.006 8.01396 5.006 8.73496V8.73496C5.006 9.45596 4.421 10.041 3.7 10.041" stroke="#00AEFF" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+          <path d="M14.7139 7.42896L16.8569 10.344L18.9999 7.42896" stroke="#00AEFF" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+          <path d="M16.8599 12.53V10.34" stroke="#00AEFF" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+          <path d="M12.1429 7.42896V10.429C12.1429 11.612 11.1839 12.572 9.99993 12.572V12.572C8.81693 12.572 7.85693 11.613 7.85693 10.429V7.42896" stroke="#00AEFF" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+          </svg> Compre jogos e itens digitais</li>
+      </ul>
+
+      <button class="flex btn-primary">
+        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M18.7937 12.6832C18.7822 10.7159 19.6702 9.2333 21.4634 8.14007C20.4605 6.69782 18.9432 5.90458 16.9431 5.7517C15.0493 5.60171 12.9774 6.85935 12.2188 6.85935C11.417 6.85935 9.58362 5.80362 8.14103 5.80362C5.16391 5.84977 2 8.18622 2 12.9399C2 14.3446 2.25576 15.7955 2.76727 17.2897C3.4512 19.2569 5.91681 24.0769 8.48875 23.9991C9.83362 23.9673 10.7848 23.0414 12.5349 23.0414C14.2332 23.0414 15.1126 23.9991 16.6126 23.9991C19.2075 23.9616 21.4375 19.58 22.087 17.607C18.6069 15.96 18.7937 12.7841 18.7937 12.6832ZM15.7735 3.88543C17.2305 2.14895 17.0983 0.568247 17.0552 0C15.7678 0.0749971 14.2792 0.879774 13.4315 1.86916C12.4975 2.93066 11.9486 4.2431 12.0665 5.72285C13.4573 5.82958 14.7275 5.11134 15.7735 3.88543Z" fill="white"/>
+          </svg>
+        Baixar para o MacOS</button>
+
+        <div class="flex download-section">
+          <svg width="20" height="24" viewBox="0 0 16 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M12.1111 21H3.22222C1.99444 21 1 20.0056 1 18.7778V3.22222C1 1.99444 1.99444 1 3.22222 1H12.1111C13.3389 1 14.3333 1.99444 14.3333 3.22222V18.7778C14.3333 20.0056 13.3389 21 12.1111 21Z" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+            <path d="M7.66553 16.8333C7.5122 16.8333 7.38775 16.9578 7.38887 17.1111C7.38887 17.2644 7.51331 17.3889 7.66664 17.3889C7.81998 17.3889 7.94442 17.2644 7.94442 17.1111C7.94442 16.9578 7.81998 16.8333 7.66553 16.8333" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+            <path d="M6.27783 4.33339H9.05561" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
+          <div style="font-size: 12px;">
+            <p>Também disponível como</p>
+            <p><u>aplicativo móvel</u></p>
+          </div>
+      </div>
+    </div>
+
+    <div class="app-section">
+      <img class="app" src="../../../assets/ilustrations/app.png" alt="">
+      <img class="app-mini" src="../../../assets/ilustrations/app-mini.png" alt="">
+    </div>
+
+  </div>
+</footer>
