--- a/src/app/components/main/main.component.css
+++ b/src/app/components/main/main.component.css
@@ -7,12 +7,8 @@ main > section.header {
   justify-content: space-between;
 }
 
-section.header > * {
-  max-width: 20%;
-}
-
 h2 {
-  width: 80px;
+  width: 100px;
 }
 
 .subtitle {
@@ -47,3 +43,9 @@ span {
   padding: 40px 0;
 }
 
+
+@media screen and (max-width:768px) {
+  .subtitle, .wrapper {
+    display: none;
+  }
+}
