banner tablet and mobile version added

--- a/src/app/components/banner/banner.component.css
+++ b/src/app/components/banner/banner.component.css
@@ -1,4 +1,25 @@
 .banner {
+  grid-template-areas:
+  "icons description logo"
+  "icons description trailer"
+  "icons description trailer";
+}
+
+.banner-icons {
+  grid-area: icons;
+}
+.banner-description {
+  grid-area: description;
+}
+.logo-game {
+  grid-area: logo;
+}
+.banner-trailer {
+  grid-area: trailer;
+  margin-top: -50px;
+}
+
+.banner {
   justify-content: space-between;
   margin: 50px auto;
   gap: 30px;
@@ -72,3 +93,134 @@ button {
 .banner-icons img.active {
   filter: grayscale(0%);
 }
+
+
+@media screen and (min-width:670px) and (max-width:770px) {
+  .banner {
+    grid-template-areas:
+    "description description logo"
+    "description description trailer"
+    "icons icons trailer";
+  }
+
+  .banner-icons {
+    flex-direction: row;
+    gap: 15px;
+  }
+
+  .banner-trailer {
+    margin-top: 0;
+  }
+
+  .banner-trailer p {
+    opacity: 0;
+  }
+}
+
+@media screen and (max-width:669px) {
+  .banner {
+    grid-template-areas:
+    "description"
+    "description"
+    "icons";
+  }
+
+  .banner-icons {
+    flex-direction: row;
+    gap: 10px;
+  }
+
+  .logo-game, .banner-trailer {
+    display: none;
+  }
+}
+
+@media screen and (max-width:400px) {
+}
+
+
+
+/* .banner {
+  justify-content: space-between;
+  margin: 50px auto;
+  gap: 30px;
+}
+
+.banner-icons {
+  flex-direction: column;
+  gap: 30px;
+}
+
+.banner-icons img {
+  cursor: pointer;
+}
+
+h1 {
+  font-size: clamp(30px, 5vw, 60px);
+  line-height: clamp(35px, 6vw, 70px);
+  max-width: 562px;
+}
+
+p {
+  margin-top: 20px;
+  font-size: 18px;
+}
+
+button {
+  margin-top: 40px;
+}
+
+.logo-game {
+  width: 280px;
+}
+
+.trailer {
+  position: relative;
+}
+
+.trailer p {
+  text-align: right;
+  text-transform: uppercase;
+  font-size: 13px;
+  margin-bottom: 15px;
+}
+
+.trailer svg {
+  position: absolute;
+  top: 85px;
+  left: 110px;
+  background: rgba(0, 0, 0, 0.651);
+  border-radius: 50%;
+  padding: 15px;
+  z-index: 99;
+  width: 51px;
+  height: 51px;
+}
+
+.img-trailer, .gif-trailer {
+  width: 280px;
+  height: 158px;
+  position: absolute;
+  border-radius: 5px;
+  cursor: pointer;
+  right: 0;
+  z-index: 3;
+}
+
+.banner-icons img {
+  filter: grayscale(100%);
+}
+
+.banner-icons img.active {
+  filter: grayscale(0%);
+}
+
+@media screen and (max-width:1036px) {
+}
+
+@media screen and (max-width:768px) {
+}
+
+@media screen and (max-width:400px) {
+}
+ */
