--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -7,8 +7,8 @@
 
     <nav class="flex">
       <ul class="nav-primary flex">
-        <li>Jogos</li>
-        <li>Esportes</li>
+        <li class="dropdown">Jogos</li>
+        <li class="dropdown">Esportes</li>
         <li>Loja</li>
         <li>Notícias</li>
         <li>Suporte</li>
@@ -20,7 +20,8 @@
       <button class="btn-primary flex">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><g fill="none" stroke="white" stroke-width="2"><path stroke-linejoin="round" d="M4 18a4 4 0 0 1 4-4h8a4 4 0 0 1 4 4a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2z"/><circle cx="12" cy="7" r="3"/></g></svg>
         Logar</button>
-    </div>
+      </div>
 
   </header>
 </div>
+<!-- <app-dropdown></app-dropdown> -->
