--- a/src/styles.css
+++ b/src/styles.css
@@ -49,6 +49,9 @@ button {
   border: 2px solid white;
 }
 
+a {
+  text-decoration: none;
+}
 
 @media screen and (max-width:768px) {
   .container {
