--- a/src/app/components/dropdownjogos/dropdownjogos.component.css
+++ b/src/app/components/dropdownjogos/dropdownjogos.component.css
@@ -4,14 +4,28 @@
 
 svg {
   fill: var(--blue-light);
-  opacity: .6;
+  opacity: 0.6;
+}
+
+.dropdown.bigscreen {
+  background-color: rgba(173, 216, 230, 0.671);
+  position: absolute;
+  padding-top: 100px;
+  width: 100%;
 }
 
 .dropdown {
   position: relative;
-  background: linear-gradient(25deg, rgba(2, 2, 3, 1) 20%, rgba(14, 17, 23, 1) 55%);
+  background: linear-gradient(
+    25deg,
+    rgba(2, 2, 3, 1) 20%,
+    rgba(14, 17, 23, 1) 55%
+  );
   width: 100vw;
   z-index: 30;
+  left: 0;
+  right: 0;
+  top: 0;
 }
 
 section {
@@ -48,11 +62,10 @@ section {
   color: rgb(160, 160, 160);
 }
 
-
 .sub-bar {
   z-index: 23;
   gap: 20px;
-  background: #15171B;
+  background: #15171b;
   margin: auto;
   justify-content: center;
   padding: 20px;
@@ -66,7 +79,6 @@ section {
 }
 
 @media screen and (max-width: 680px) {
-
   .sub-bar {
     flex-direction: column;
     align-items: center;
@@ -88,8 +100,9 @@ section {
 @media screen and (max-width: 1020px) {
   .dropdown {
     margin: 0 -50px;
-    background: none;
     padding: 0;
+    margin-top: var(--padding-top);
+    z-index: 990;
   }
 
   section {
@@ -102,5 +115,3 @@ section {
     margin-left: -50px;
   }
 }
-
-
