--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -30,7 +30,7 @@
 
     <div class="nav-secondary flex" [ngClass]="{'show': isDropdownVisible}">
       <button class="btn-secondary">Criar conta</button>
-      <button class="btn-primary flex">
+      <button class="btn-primary flex" (click)="toggleLoginModal()">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><g fill="none" stroke="white" stroke-width="2"><path stroke-linejoin="round" d="M4 18a4 4 0 0 1 4-4h8a4 4 0 0 1 4 4a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2z"/><circle cx="12" cy="7" r="3"/></g></svg>
         Logar</button>
     </div>
@@ -41,6 +41,4 @@
 
   </header>
 </div>
-<!-- <app-dropdown-jogos></app-dropdown-jogos> -->
-<!-- <app-dropdown-jogos *ngIf="isHeaderBlack && activeSubmenuId === 'jogos'"></app-dropdown-jogos> -->
-<!-- <app-dropdown-esportes *ngIf="activeSubmenuId === 'esportes'"></app-dropdown-esportes> -->
+<app-login *ngIf="isLoginOpen" (closeModal)="closeLoginModal()"></app-login>
