fixed button OS to android

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -31,7 +31,7 @@
 
       <button class="flex btn-primary">
         <img [src]="iconOs" style="width: 25px;">
-        Baixar para o {{title}}</button>
+        Baixar {{title}}</button>
 
         <div class="flex download-section">
           <svg width="20" height="24" viewBox="0 0 16 22" fill="none" xmlns="http://www.w3.org/2000/svg">
